--- a/src/components/OrgPostCard/OrgPostCard.module.css
+++ b/src/components/OrgPostCard/OrgPostCard.module.css
@@ -37,11 +37,9 @@
   border-radius: 0px;
   width: 100%;
   height: 12rem;
-  max-width: 20rem;
   max-height: 12rem;
   object-fit: cover;
   position: relative;
-  background-color: black;
 }
 .cards:hover {
   filter: brightness(0.8);
@@ -98,6 +96,12 @@
   flex: 1;
   margin-right: 20px;
   width: 25rem;
+  height: 15rem;
+}
+.nomodalImage {
+  flex: 1;
+  margin-right: 20px;
+  width: 100%;
   height: 15rem;
 }
 
