--- a/src/screens/BlockUser/BlockUser.module.css
+++ b/src/screens/BlockUser/BlockUser.module.css
@@ -1,184 +1,92 @@
-.mainpage {
+.btnsContainer {
   display: flex;
-  flex-direction: row;
+  margin: 2.5rem 0 2.5rem 0;
 }
 
-.sidebar {
-  z-index: 0;
-  padding-top: 5px;
-  margin: 0;
-  height: 100%;
-}
-
-.sidebar:after {
-  content: '';
-  background-color: #f7f7f7;
-  position: absolute;
-  width: 2px;
-  height: 600px;
-  top: 10px;
-  left: 94%;
-  display: block;
-}
-
-.sidebarsticky {
-  padding-left: 45px;
-}
-
-.sidebarsticky > input {
-  text-decoration: none;
-  margin-bottom: 50px;
-  border-color: #e8e5e5;
-  width: 80%;
-  border-radius: 7px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 10px;
-  padding-left: 10px;
-  box-shadow: none;
-}
-
-.navitem {
-  padding-left: 27%;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  cursor: pointer;
-}
-
-.searchtitle {
-  color: #707070;
-  font-weight: 600;
-  font-size: 18px;
-  margin-bottom: 20px;
-  padding-bottom: 5px;
-  border-bottom: 3px solid #31bb6b;
-  width: 60%;
-}
-
-.logintitle {
-  color: #707070;
-  font-weight: 600;
-  font-size: 20px;
-  margin-bottom: 30px;
-  padding-bottom: 5px;
-  border-bottom: 3px solid #31bb6b;
-  width: 30%;
-}
-
-.mainpageright > hr {
-  margin-top: 20px;
-  width: 100%;
-  margin-left: -15px;
-  margin-right: -15px;
-  margin-bottom: 20px;
-}
-
-.justifysp {
+.btnsContainer .btnsBlock {
   display: flex;
-  justify-content: space-between;
 }
 
-.radio_buttons {
-  color: #707070;
-  font-weight: 600;
-  font-size: 14px;
-}
-.radio_buttons > input {
-  transform: scale(1.2);
-}
-.radio_buttons > label {
-  margin-top: -4px;
-  margin-left: 5px;
-  margin-right: 15px;
+.btnsContainer .btnsBlock button {
+  margin-left: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.loader {
-  text-align: center;
-}
-
-@media screen and (max-width: 575.5px) {
-  .justifysp {
-    padding-left: 55px;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-
-  .mainpageright {
-    width: 100%;
-  }
-}
-
-.list_box {
-  height: 70vh;
-  overflow-y: auto;
-  width: auto;
-  padding-right: 50px;
-}
-
-@media only screen and (max-width: 600px) {
-  .sidebar {
-    position: relative;
-    bottom: 18px;
-  }
-
-  .invitebtn {
-    width: 135px;
-    position: relative;
-    right: 10px;
-  }
-
-  .userListTable {
-    margin-left: 40px;
-  }
-}
-
-/* Loader CSS */
-
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
-}
-
-.loader {
-  margin: 60px auto;
-  margin-top: 35vh !important;
-  font-size: 10px;
+.btnsContainer .inputContainer {
+  flex: 1;
   position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-left: 1.1em solid #febc59;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
+}
+.btnsContainer .input {
+  width: 70%;
+  position: relative;
 }
 
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+.btnsContainer input {
+  outline: 1px solid var(--bs-gray-400);
+}
+
+.btnsContainer .inputContainer button {
+  width: 52px;
+}
+
+.listBox {
+  width: 100%;
+  flex: 1;
+}
+
+.notFound {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+}
+
+@media (max-width: 1020px) {
+  .btnsContainer {
+    flex-direction: column;
+    margin: 1.5rem 0;
+  }
+  .btnsContainer .input {
+    width: 100%;
+  }
+  .btnsContainer .btnsBlock {
+    margin: 1.5rem 0 0 0;
+    justify-content: space-between;
   }
 
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+  .btnsContainer .btnsBlock button {
+    margin: 0;
+  }
+
+  .btnsContainer .btnsBlock div button {
+    margin-right: 1.5rem;
   }
 }
 
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+/* For mobile devices  */
+
+@media (max-width: 520px) {
+  .btnsContainer {
+    margin-bottom: 0;
   }
 
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+  .btnsContainer .btnsBlock {
+    display: block;
+    margin-top: 1rem;
+    margin-right: 0;
+  }
+
+  .btnsContainer .btnsBlock div {
+    flex: 1;
+  }
+
+  .btnsContainer .btnsBlock button {
+    margin-bottom: 1rem;
+    margin-right: 0;
+    width: 100%;
   }
 }
