--- a/src/screens/OrgSettings/OrgSettings.module.css
+++ b/src/screens/OrgSettings/OrgSettings.module.css
@@ -1,184 +1,31 @@
-.navbarbg {
-  height: 60px;
-  background-color: white;
+.settingsBody {
+  margin: 2.5rem 0;
+}
+
+.cardHeader {
+  padding: 1.25rem 1rem 1rem 1rem;
+  border-bottom: 1px solid var(--bs-gray-200);
   display: flex;
-  margin-bottom: 30px;
-  z-index: 1;
-  position: relative;
-  flex-direction: row;
   justify-content: space-between;
-  box-shadow: 0px 0px 8px 2px #c8c8c8;
-}
-.titlemodal .logo {
-  color: #707070;
-  margin-left: 0;
-  display: flex;
   align-items: center;
-  text-decoration: none;
 }
 
-.logo img {
-  margin-top: 0px;
-  margin-left: 10px;
-  height: 64px;
-  width: 70px;
-}
-
-.logo > strong {
-  line-height: 1.5rem;
-  margin-left: -5px;
-  font-family: sans-serif;
-  font-size: 19px;
-  color: #707070;
-}
-
-.mainpage {
-  display: flex;
-  flex-direction: row;
-}
-.sidebar {
-  z-index: 0;
-  padding-top: 5px;
-  margin: 0;
-  height: 100%;
-}
-.sidebar:after {
-  content: '';
-  background-color: #f7f7f7;
-  position: absolute;
-  width: 2px;
-  height: 100%;
-  top: 10px;
-  left: 94%;
-  display: block;
-}
-.sidebarsticky {
-  padding-left: 45px;
-  margin-top: 7px;
-}
-.sidebarsticky > p {
-  margin-top: -10px;
-}
-
-.navitem {
-  padding-left: 27%;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  cursor: pointer;
-}
-
-.headerDiv {
-  display: flex;
-  flex-direction: column;
-}
-
-.logintitle {
-  color: #707070;
+.cardHeader .cardTitle {
+  font-size: 1.2rem;
   font-weight: 600;
-  font-size: 20px;
-  /* margin-bottom: 30px; */
-  padding-bottom: 5px;
-  border-bottom: 3px solid #31bb6b;
-  /* width: 15%; */
-  margin-left: 20px;
-}
-.loginSubtitle {
-  color: #707070;
-  font-weight: 600;
-  font-size: 19px;
-  /* margin-bottom: 30px; */
-  padding-bottom: 5px;
-  /* border-bottom: 3px solid #31bb6b; */
-  /* width: 15%; */
-  margin-left: 20px;
-}
-.searchtitle {
-  color: #707070;
-  font-weight: 600;
-  font-size: 18px;
-  margin-bottom: 20px;
-  padding-bottom: 5px;
-  border-bottom: 3px solid #31bb6b;
-  width: 60%;
-}
-.logintitleadmin {
-  color: #707070;
-  font-weight: 600;
-  font-size: 18px;
-  margin-top: 50px;
-  margin-bottom: 40px;
-  padding-bottom: 5px;
-  border-bottom: 3px solid #31bb6b;
-  width: 30%;
-}
-.greenregbtn {
-  margin: 1rem 0 0;
-  margin-top: 15px;
-  border: 1px solid #e8e5e5;
-  box-shadow: 0 2px 2px #e8e5e5;
-  padding: 6px 8px;
-  border-radius: 5px;
-  background-color: #31bb6b;
-  width: 70%;
-  font-size: 14px;
-  color: white;
-  outline: none;
-  font-weight: 600;
-  cursor: pointer;
-  transition: transform 0.2s, box-shadow 0.2s;
-}
-.sidebarsticky > input {
-  text-decoration: none;
-  margin-bottom: 50px;
-  border-color: #e8e5e5;
-  width: 80%;
-  border-radius: 7px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 10px;
-  padding-left: 10px;
-  box-shadow: none;
 }
 
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
+.cardBody {
+  min-height: 180px;
 }
-.loader {
-  margin: 60px auto;
-  margin-top: 35vh !important;
-  font-size: 10px;
-  position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-left: 1.1em solid #febc59;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
+
+.cardBody .textBox {
+  margin: 0 0 3rem 0;
+  color: var(--bs-secondary);
 }
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+
+.cardBody .deleteButton {
+  width: 100%;
+  font-size: 0.9rem;
+  margin-bottom: 0.5rem;
 }
