--- a/src/components/OrgUpdate/OrgUpdate.module.css
+++ b/src/components/OrgUpdate/OrgUpdate.module.css
@@ -1,6 +1,13 @@
-.loader {
+.message {
   height: 420px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.icon {
+  transform: scale(1.5);
+  color: var(--bs-danger);
+  margin-bottom: 1rem;
 }
