--- a/src/screens/OrgList/OrgList.module.css
+++ b/src/screens/OrgList/OrgList.module.css
@@ -7,6 +7,33 @@
   display: flex;
 }
 
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sampleHover:hover {
+  border-color: grey;
+  color: grey;
+}
+
+.btnDivider {
+  padding: 20px;
+}
+
+.sampleOrgSection {
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sampleModalTitle {
+  background-color: green;
+}
+
 .btnsContainer .btnsBlock button {
   margin-left: 1rem;
   display: flex;
@@ -129,12 +156,14 @@
   flex-direction: column;
   margin-left: 1rem;
 }
+
 .titlemodaldialog {
   color: #707070;
   font-size: 20px;
   margin-bottom: 20px;
   padding-bottom: 5px;
 }
+
 form label {
   font-weight: bold;
   padding-bottom: 1px;
@@ -170,13 +199,16 @@ form > input {
   cursor: pointer;
   color: #707070;
 }
+
 .modalbody {
   width: 50px;
 }
+
 .pluginStoreBtnContainer {
   display: flex;
   gap: 1rem;
 }
+
 .greenregbtn {
   margin: 1rem 0 0;
   margin-top: 10px;
@@ -200,6 +232,7 @@ form > input {
   width: 45%;
   height: 18px;
 }
+
 .secondbtn {
   display: flex;
   align-items: center;
