--- a/src/screens/OrgPost/OrgPost.module.css
+++ b/src/screens/OrgPost/OrgPost.module.css
@@ -190,22 +190,40 @@
   border-bottom: 3px solid #31bb6b;
   width: 40%;
 }
-.postinfo {
-  height: 80px;
-}
 
 .postinfo {
-  height: 80px;
+  width: 100%;
+  height: 100px;
   margin-bottom: 20px;
+  padding: 5px;
+  border-radius: 5px;
+  border-color: #aaaaaa;
+}
+.postinfo:focus {
+  outline: 2px solid #31bb6b;
+}
+.orgphoto {
+  display: block;
+}
+.createPostBtn {
+  width: 100%;
+}
+.closeBtn {
+  width: 16px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  /* margin-top: px; */
 }
 .titlemodal {
   color: #707070;
   font-weight: 600;
   font-size: 20px;
-  margin-bottom: 20px;
+  margin-block: 10px;
   padding-bottom: 5px;
   border-bottom: 3px solid #31bb6b;
-  width: 65%;
 }
 .cancel > i {
   margin-top: 5px;
