--- a/src/components/UsersTableItem/UsersTableItem.module.css
+++ b/src/components/UsersTableItem/UsersTableItem.module.css
@@ -1,26 +1,26 @@
 .input {
-    position: relative;
+  position: relative;
 }
 
 .notJoined {
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.modalTable img[alt="creator"] {
-    height: 24px;
-    width: 24px;
-    object-fit: contain;
-    border-radius: 12px;
-    margin-right: 0.4rem;
+.modalTable img[alt='creator'] {
+  height: 24px;
+  width: 24px;
+  object-fit: contain;
+  border-radius: 12px;
+  margin-right: 0.4rem;
 }
 
-.modalTable img[alt="orgImage"] {
-    height: 28px;
-    width: 28px;
-    object-fit: contain;
-    border-radius: 4px;
-    margin-right: 0.4rem;
+.modalTable img[alt='orgImage'] {
+  height: 28px;
+  width: 28px;
+  object-fit: contain;
+  border-radius: 4px;
+  margin-right: 0.4rem;
 }
