--- a/src/screens/ForgotPassword/ForgotPassword.module.css
+++ b/src/screens/ForgotPassword/ForgotPassword.module.css
@@ -1,14 +1,72 @@
-.containerWrapper {
+.pageWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.cardBody {
+  padding: 2rem;
+  background-color: #fff;
+  border-radius: 0.8rem;
+  border: 1px solid var(--bs-gray-200);
+}
+
+.keyWrapper {
+  height: 72px;
+  width: 72px;
+  transform: rotate(180deg);
+  position: relative;
+  overflow: hidden;
+  display: block;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  border-radius: 50%;
+  margin: 1rem auto;
 }
 
-.containerWrapper .resetForm {
+.keyWrapper .themeOverlay {
+  position: absolute;
+  background-color: var(--bs-primary);
+  height: 100%;
   width: 100%;
-  max-width: 700px;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  opacity: 0.15;
+}
+
+.keyWrapper .keyLogo {
+  height: 42px;
+  width: 42px;
+  -webkit-animation: zoomIn 0.3s ease-in-out;
+  animation: zoomIn 0.3s ease-in-out;
+}
+
+
+@-webkit-keyframes zoomIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
 }
