--- a/src/components/EventListCard/EventListCard.module.css
+++ b/src/components/EventListCard/EventListCard.module.css
@@ -26,9 +26,7 @@
   justify-content: flex-end;
 }
 .icon {
-  transform: scale(1);
-  cursor: pointer;
-  color: #31bb6b;
+  margin: 1px;
 }
 
 .cards {
@@ -86,6 +84,8 @@
 }
 .dispflex {
   display: flex;
+  margin-bottom: 5px;
+  margin-right: 5px;
 }
 .dispflex > input {
   width: 20%;
