Fix dashboard items (#1007)
* Dashboard items are working now.

* added variables for links -fix dashboard items

* Added variables for links -fix dashboard items.

* made the changes as said

* Removed : string from variable assignment.

* remove repititive code and resolved falling tests

* Fix repeating code and falling tests.

* Resolved some more falling tests

* write test for missed lines

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -5560,7 +5560,7 @@ fieldset:disabled .btn {
   box-shadow: var(--bs-toast-box-shadow);
   border-radius: var(--bs-toast-border-radius);
 }
-.toast.showing {
+.showing {
   opacity: 0;
 }
 .toast:not(.show) {
