--- a/src/screens/OrgList/OrgList.module.css
+++ b/src/screens/OrgList/OrgList.module.css
@@ -7,7 +7,56 @@
   display: flex;
 }
 
-.flex {
+.orgCreationBtn {
+  width: 100%;
+  border: None;
+}
+
+.line::before {
+  content: '';
+  display: inline-block;
+  width: 100px;
+  border-top: 1px solid #000;
+  margin: 0 10px;
+}
+
+.line::before {
+  left: 0;
+}
+
+.line::after {
+  right: 0;
+}
+
+.flexContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.orText {
+  display: block;
+  position: absolute;
+  top: calc(-0.7rem + 0.5rem);
+  left: calc(50% - 2.6rem);
+  margin: 0 auto;
+  padding: 0.5rem 2rem;
+  z-index: 100;
+  background: var(--bs-white);
+  color: var(--bs-secondary);
+}
+.sampleOrgSection {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  row-gap: 1em;
+}
+
+.sampleOrgCreationBtn {
+  width: 100%;
+  background-color: transparent;
+  color: #707070;
+  border-color: #707070;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,13 +67,11 @@
   color: grey;
 }
 
-.btnDivider {
-  padding: 20px;
-}
-
 .sampleOrgSection {
   font-family: Arial, Helvetica, sans-serif;
-  display: flex;
+  width: 100%;
+  display: grid;
+  grid-auto-columns: repeat(1, 1fr);
   justify-content: center;
   flex-direction: column;
   align-items: center;
