--- a/src/screens/MemberDetail/MemberDetail.module.css
+++ b/src/screens/MemberDetail/MemberDetail.module.css
@@ -112,6 +112,16 @@
   justify-content: space-between;
 }
 
+.flexclm {
+  display: flex;
+  flex-direction: column;
+}
+
+.btngroup {
+  display: flex;
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
 @media screen and (max-width: 1200px) {
   .justifysp {
     padding-left: 55px;
@@ -336,13 +346,12 @@
   border-color: #31bb6b;
   background-color: #31bb6b;
   color: white;
-  padding-right: 10px;
-  padding-left: 10px;
-  justify-content: flex-end;
-  float: right;
-  text-align: right;
   box-shadow: none;
   height: 2.5rem;
+  width: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .userImage {
