adding css for the changes

--- a/src/components/Advertisements/core/AdvertisementEntry/AdvertisementEntry.module.css
+++ b/src/components/Advertisements/core/AdvertisementEntry/AdvertisementEntry.module.css
@@ -4,9 +4,7 @@
 }
 
 .entryaction {
-  margin-left: auto;
   display: flex !important;
-  align-items: center;
 }
 
 .entryaction i {
@@ -17,4 +15,9 @@
   height: 1rem;
   width: 1rem;
   margin-right: 8px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
 }
