Imporved events page

--- a/src/components/EventListCard/EventListCard.module.css
+++ b/src/components/EventListCard/EventListCard.module.css
@@ -46,7 +46,7 @@
 
 .cards {
   width: 100%;
-  background: rgba(40, 167, 69, 1);
+  background: #31bb6b;
   padding: 2px 3px;
   border-radius: 5px;
   border: 1px solid #e8e8e8;
