Updated event list design in date

--- a/src/components/EventCalendar/EventCalendar.module.css
+++ b/src/components/EventCalendar/EventCalendar.module.css
@@ -35,18 +35,18 @@
 }
 .calendar__days {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(7, minmax(0, 1fr));
   grid-template-rows: repeat(6, 1fr);
 }
 .day {
   background-color: #ffffff;
-  padding-bottom: 4rem;
   padding-left: 0.3rem;
   padding-right: 0.3rem;
   background-color: white;
   border: 1px solid #8d8d8d55;
   color: #4b4b4b;
   font-weight: 600;
+  height: 8rem;
 }
 .day__outside {
   background-color: #eeeded;
@@ -71,4 +71,48 @@
   text-decoration: none;
   margin-left: 20px;
   border: none;
+}
+.btn__more {
+  border: 0px;
+  font-size: 14px;
+  background-color: initial;
+  color: #31bb6b;
+  font-weight: 600;
+  transition: all 200ms;
+  position: relative;
+  display: block;
+}
+.btn__more:hover {
+  color: #3ce080;
+}
+
+.expand_event_list {
+  display: block;
+}
+
+.expand_list_container {
+  width: 200px;
+  max-height: 250px;
+  z-index: 10;
+  position: relative;
+  left: auto;
+  right: auto;
+  overflow: auto;
+  padding: 10px 4px 0px 4px;
+  background-color: rgb(241, 241, 241);
+  border: 1px solid rgb(201, 201, 201);
+  border-radius: 5px;
+}
+
+@media only screen and (max-width: 700px) {
+  .event_list {
+    display: none;
+  }
+  .expand_list_container {
+    width: 150px;
+    padding: 4px 4px 0px 4px;
+  }
+  .day {
+    height: 5rem;
+  }
 }
