--- a/src/components/OrganizationScreen/OrganizationScreen.module.css
+++ b/src/components/OrganizationScreen/OrganizationScreen.module.css
@@ -6,7 +6,7 @@
 }
 
 .expand {
-  padding-left: 1.5rem;
+  padding-left: 4rem;
   animation: moveLeft 0.5s ease-in-out;
 }
 
@@ -15,9 +15,46 @@
   animation: moveRight 0.5s ease-in-out;
 }
 
+.collapseSidebarButton {
+  position: fixed;
+  height: 40px;
+  bottom: 0;
+  z-index: 9999;
+  width: calc(300px + 2rem);
+  background-color: rgba(245, 245, 245, 0.7);
+  color: black;
+  border: none;
+  border-radius: 0px;
+}
+
+.collapseSidebarButton:hover,
+.opendrawer:hover {
+  opacity: 1;
+  color: black !important;
+}
+.opendrawer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 100vh;
+  z-index: 9999;
+  background-color: rgba(245, 245, 245);
+  border: none;
+  border-radius: 0px;
+  margin-right: 20px;
+  color: black;
+}
+
+.mobileopenBtn {
+  display: none;
+}
 @media (max-width: 1120px) {
   .contract {
     padding-left: calc(250px + 2rem + 1.5rem);
+  }
+  .collapseSidebarButton {
+    width: calc(250px + 2rem);
   }
 }
 
@@ -31,30 +68,21 @@
   .expand {
     animation: none;
   }
+
+  .collapseSidebarButton {
+    display: none;
+  }
 }
 
 @media (max-width: 820px) {
   .pageContainer {
     padding: 1rem;
   }
-}
-
-@keyframes moveLeft {
-  from {
-    padding-left: calc(300px + 2rem + 1.5rem);
+  .mobileopenBtn {
+    display: block;
   }
-
-  to {
-    padding-left: 1.5rem;
-  }
-}
-
-@keyframes moveRight {
-  from {
-    padding-left: 1.5rem;
-  }
-
-  to {
-    padding-left: calc(300px + 2rem + 1.5rem);
+  .opendrawer,
+  .collapseSidebarButton {
+    display: none;
   }
 }
