Enabling editing an advertisement (#1169)
* add: modifying create advertisement modal to allow editing

* adding edit button to advertisement card

* fix: adding link as prop

* adding css for the changes

* changing title of edit modal

* update: changing card layout to default layout

* fix: view button styling

* fix: edit modal header styling

* adding test for increasing code coverage

* add: test case for delete add button

* fix:tests

* eslint fix

* fix: resolved warning

* add : translations

--- a/src/components/Advertisements/core/AdvertisementRegister/AdvertisementRegister.module.css
+++ b/src/components/Advertisements/core/AdvertisementRegister/AdvertisementRegister.module.css
@@ -4,6 +4,16 @@
   align-items: center;
 }
 
-.modalbtn i {
+.modalbtn i,
+.button i {
   margin-right: 8px;
+}
+
+.button {
+  min-width: 102px;
+}
+
+.editHeader {
+  background-color: #31bb6b;
+  color: white;
 }
