--- a/src/components/Advertisements/core/AdvertisementRegister/AdvertisementRegister.module.css
+++ b/src/components/Advertisements/core/AdvertisementRegister/AdvertisementRegister.module.css
@@ -4,16 +4,6 @@
   align-items: center;
 }
 
-.modalbtn i,
-.button i {
+.modalbtn i {
   margin-right: 8px;
-}
-
-.button {
-  min-width: 102px;
-}
-
-.editHeader {
-  background-color: #31bb6b;
-  color: white;
 }
