--- a/src/components/OrgListCard/OrgListCard.module.css
+++ b/src/components/OrgListCard/OrgListCard.module.css
@@ -1,7 +1,7 @@
 .orgCard {
   background-color: var(--bs-white);
   margin: 0.5rem;
-  height: calc(120px + 2rem);
+  height: calc(120px + 4rem);
   padding: 1rem;
   border-radius: 8px;
   outline: 1px solid var(--bs-gray-200);
@@ -22,14 +22,14 @@
 }
 
 .orgCard .innerContainer .orgImgContainer img {
-  width: 125px;
-  height: 120px;
+  width: calc(125px + 1rem);
+  height: calc(120px + 2rem);
   object-fit: contain;
 }
 
 .orgCard .innerContainer .orgImgContainer .emptyImg {
-  width: 125px;
-  height: 120px;
+  width: calc(125px + 1rem);
+  height: calc(120px + 2rem);
   background-color: var(--bs-gray-200);
 }
 
