--- a/src/screens/UserPortal/UserLoginPage/UserLoginPage.module.css
+++ b/src/screens/UserPortal/UserLoginPage/UserLoginPage.module.css
@@ -45,4 +45,21 @@ body::before {
   .leftPane {
     width: 100%;
   }
+
+  .socialIcons {
+    margin-bottom: 1rem;
+  }
+}
+
+.socialIcons {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+}
+
+.socialIcon {
+  font-size: 24px;
+  color: #555;
+  transition: color 0.3s ease;
+  cursor: pointer;
 }
